fixed horiz scrolling on mobile I think

--- a/src/App.css
+++ b/src/App.css
@@ -11,28 +11,32 @@
 .nav-item {
   padding: 10px;
 }
-@media screen and (max-width: 1220px) {
-  .grid-container div:nth-child(2) {
-    grid-column: 1;
-    grid-row: 1;
-  }
-  .grid-profile div:nth-child(2) {
-    grid-column: 2;
-    grid-row: 1;
-  }
-}
 
 .grid-container {
   display: grid;
   width: 100vw;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   /* grid-template-columns: minmax(367px, 300px) minmax(367px, 300px) minmax(367px, 300px); */
-
+  
   /* grid-template-rows: 10% 10% 10%; */
   /* background-color: #1691f5; */
   padding: 1vw;
+  
   justify-content: center;
 }
+      @media screen and (max-width: 1220px) {
+        .grid-container div:nth-child(2) {
+          grid-column: 1;
+          grid-row: 1;
+        }
+        .grid-profile div:nth-child(2) {
+          grid-column: 2;
+          grid-row: 1;
+        }
+        .grid-container {
+          padding: 0vw;
+        }
+      }
 .grid-item {
   display: inline;
   padding: 1vw;
@@ -86,5 +90,6 @@
 }
 #basic-navbar-nav {
   text-align: right;
+  padding: 3px;
 }
 
